fix display error on smaller screens

--- a/packages/quantic/force-app/main/default/lwc/quanticFeedbackModalQna/quanticFeedbackModalQna.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticFeedbackModalQna/quanticFeedbackModalQna.css
@@ -3,5 +3,5 @@
 }
 
 .feedback-modal-qna__radio-group {
-    min-width: 186px;
+    min-width: 11.7rem;
 }
